tests/snapshots/quests/parse_samples__snapshot_parse_all_sample_quests@samples__GT_New_Horizons_2.8.4_Client_Java_8.zip__config__betterquesting__DefaultQuests__Quests__GettingAround-bAal8kZ3R8eRTwaHgbYkKA==__WoodenRailVarian-AAAAAAAAAAAAAAAAAAACog==.json.snap
---
source: tests/parse_samples.rs
expression: quest
---
{
  "id": 674,
  "prerequisites": [
    676
  ],
  "properties": {
    "auto_claim": false,
    "desc": "The wooden junction, wye and switch tracks need an assembling machine to craft. They allow you to join and switch to tracks going to different locations.\n\nNEI doesn't show the right recipe on the first page. Go through the recipes a bit to find the right one.",
    "global_share": true,
    "icon": null,
    "is_global": false,
    "is_main": false,
    "is_silent": false,
    "locked_progress": 0,
    "name": "Wooden Rail Variants",
    "party_single_reward": false,
    "quest_logic": "AND",
    "repeat_relative": true,
    "repeat_time": -1,
    "simultaneous": false,
    "snd_complete": "random.levelup",
    "snd_update": "random.levelup",
    "task_logic": "AND",
    "visibility": "NORMAL"
  },
  "required_prerequisites": [
    676
  ],
  "rewards": [],
  "tasks": []
}
